app/assets/stylesheets/less/_yobiUI.less
/* ... */
.counter {
    left: 2px;
    position: relative;
    padding: 2px 3px;
    font-size: 11px;
    color: @blue2;
}


.ybtn, .flat > li > .ybtn  {
    text-align :center;
    white-space:nowrap;
    color: #333;
    background-color: @yobi-btn-default;
    text-shadow:none;
    .border-radius(3px)  !important;
    display:inline-block;
    padding: 4px 12px !important;
    vertical-align: middle;
    cursor: pointer;
    line-height: 20px;
    font-size: 14px;
    .transition(all 0.3s ease);
    outline:0 none;
    position:relative;
    margin-bottom: 0;
    margin-left: .3em;
    border: 1px solid rgba(0,0,0,.15);
    .box-shadow(0 1px 0 rgba(0,0,0,.05));

    i { line-height:20px;}

    &.ybtn-medium {
        padding:4px 12px;
    }

    &:first-child {
        margin-left:0;
    }

    &:hover, &:focus, &:active, &:focus, &.disabled, &[disabled]  {
        border:1px solid rgba(0,0,0,.25);
        background-color:#f1f1f1;
        color: #292929;
        text-decoration:none;
    }

    &.ybtn-small {
        padding: 3px 10px !important;
        font-size: 13px !important;
    }

    &.ybtn-large {
        padding: 10px 15px !important;
        font-size: 16px !important;
    }

    &.ybtn-middle {
        padding: 7px 15px !important;
        font-size: 14px !important;
    }

    &.ybtn-mini {
        padding: 0 6px !important;
        font-size: 10.5px !important;
    }

    &.ybtn-minimum {
        padding: 0 4px !important;
        font-size: 10px !important;
        line-height: 16px !important;

         i { line-height:16px;}
    }

    &.ybtn-maximum {
        padding: 20px 30px !important;
        font-size: 26px !important;
    }

    &.ybtn-fullsize {
        display:block;
        width:100%;
        box-sizing:border-box;
    }

    &.ybtn-padding {
        padding:13px 30px !important;
        font-size: 20px !important;
    }


    &.ybtn-primary, &.ybtn-success,&.ybtn-info, &.ybtn-danger,&.ybtn-inverse, &.ybtn-disabled, &ybtn-warning, &.ybtn-transparent, &.ybtn-watching  {
        color:@yobi-white;
    }

    &.ybtn-gray {
        backgroun-color: @yobi-white-dark;

        &:hover, &:focus, &:active, &:focus {
            background-color: @yobi-white !important;
        }
    }

    &.ybtn-primary {
        background-color : @yobi-btn-primary !important;
        border:1px solid @yobi-btn-primary-hover;
        &:hover, &:focus, &:active, &:focus {
            background-color: @yobi-btn-primary-hover !important;
        }
    }

    &.ybtn-success {
        background-color : @yobi-btn-primary !important;
        border:1px solid @yobi-btn-primary-hover;

        &:hover, &:focus, &:active, &:focus {
            background-color: @yobi-btn-primary-hover !important;
        }
    }

     &.ybtn-warning {
        background-color : @yobi-btn-warning !important;
        border:1px solid @yobi-btn-warning-hover;

        &:hover, &:focus {
            background-color: @yobi-btn-warning-hover !important;
        }
    }

    &.ybtn-info {
        background-color : @yobi-btn-info !important;
        border:1px solid @yobi-btn-info-hover;

        &:hover, &:focus {
            background-color: @yobi-btn-info-hover !important;
        }
    }

    &.ybtn-danger {
        background-color : @yobi-btn-danger !important;
        border:1px solid @yobi-btn-danger-hover;

        &:hover, &:focus {
            background-color: @yobi-btn-danger-hover !important;
        }
    }

    &.ybtn-inverse {
        background-color : @yobi-btn-inverse !important;
        border:1px solid @yobi-btn-inverse-hover;

        &:hover, &:focus {
            background-color: @yobi-btn-inverse-hover !important;
        }
    }

    &.ybtn-transparent {
        background-color : rgba(0,0,0, 0.25);

        &:hover, &:focus {
            background-color: rgba(0,0,0, 0.45);
        }
    }

    &.ybtn-disabled, &[disabled] {
        background-color : @yobi-btn-disabled !important;
        border:none;
        color:#dedede;
        text-shadow:1px 1px rgba(255,255,255,0.5);

        &:hover, &:focus {
            background-color: @yobi-btn-disabled !important;
        }
    }

    &.ybtn-watching {
        background-color : #f4efea !important;
        border:1px solid #C9C5C1;
        color:#333;

        &:hover, &:focus {
            background-color: #e0dad4 !important;
        }
    }

    &.ybtn-unwatching {
        background-color : @yobi-btn-disabled !important;
        border:none;

        &:hover, &:focus {
            background-color:  !important;
        }
    }

    &.dropdown-toggle {
        &:after {
            margin-left: 5px;
            vertical-align: middle;
            display: inline-block;
            vertical-align: middle !important;
            width: 0;
            .transition(all 0.3s ease);
            height: 0;
            vertical-align: top;
            border-top: 4px solid @yobi-inverse;
            border-right: 4px solid transparent;
            border-left: 4px solid transparent;
            content: "";
        }

        &:hover, &:focus  {
             &:after {
                text-decoration:none;
            }
        }

        &.ybtn-success,&.ybtn-primary, &.ybtn-info, &.ybtn-danger,&.ybtn-inverse, &.ybtn-disabled  {
           &:after {
                border-top: 4px solid @yobi-white !important;
            }

            &:hover, &:focus  {
                 &:after {
                    border-top: 4px solid @yobi-white !important;
                    text-decoration:none;
                }
            }
        }

    }

    &.round-left {
        .border-radius(6px 0 0 6px);
    }

    &.round-right {
        .border-radius(0 6px 6px 0);
    }
}
/* ... */

